# baloo-gym

./: .gitignore  .gitmodules  MUJOCO_LOG.TXT  README.md  baloo_lib.py  baloo_v0.py  entropy_reward_testing.ipynb  env_step.prof  evaluate.py  hugger_policy_rollout.py  hyperparam_opt.py  mujoco_rendering.py  ppo.db  pyproject.toml  requirements.txt  train.py  train_overnight.sh
assets/: baloo.xml
baloo_gym/envs/: baloo_base.py  baloo_v0.py  baloo_v1.py  baloo_v2.py  baloo_v3.py  baloo_v4.py  baloo_v5.py  baloo_v6.py  baloo_v7.py  baloo_v8.py  baloo_v9.py  baloo_vTEMPLATE.py
baloo_gym/policies/: open_loop_hugger.py
baloo_gym/utils/: action_spaces.py  helpers.py  mujoco_rendering.py  observation_spaces.py
baloo_gym/wrappers/: __init__.py  convex_hull.py  curriculum_learning_wrapper.py  domain_randomizer_wrapper.py  open_loop_baseline_wrapper.py  potential_based_reward_wrapper.py  three_part_reward_wrapper.py  time_limit_termination_wrapper.py  vec_env_record_video_wrapper.py
envs/: baloo_base.py  baloo_v0.py  baloo_v1.py  baloo_v2.py  baloo_v3.py  baloo_v4.py  baloo_vTEMPLATE.py
paper_data/constant_curvature_experiment/: hugger_policy_kinematics.py  kinematics_experiment.ipynb
paper_data/open_loop_baseline/: download_all_data.py  env_step.prof  plots.ipynb  policy_evaluator.py
paper_data/perturbations/: data_analysis.ipynb  env_step.prof  policy_eval_under_perturbations.py
paper_data/profiling_data/: env_step.prof  readme.md
paper_stuff/constant_curvature_experiment/: hugger_policy_kinematics.py  kinematics_experiment.ipynb
paper_stuff/open_loop_baseline/: 1000_lhs_samples.txt  compute_sample_correlation.py  data_analysis.py  hugger_policy_rollout.py  lifting_trials.json  lifting_trials_76dlqgkf.txt  lifting_trials_7rz5bam7.txt  lifting_trials_baseline.txt  lifting_trials_nbfst7tb.txt  lifting_trials_v3xsm3fc.txt  plot_correlations.ipynb  plots.ipynb  policy_evaluator.py  stats_analysis.py
paper_stuff/open_loop_baseline/data/: lifting_trials_9ol2s4a6.txt  lifting_trials_nbfst7tb.txt  lifting_trials_r7rhmfjn.txt  lifting_trials_vo3ucg8v.txt
paper_stuff/profiling_data/: mujoco_profiling.txt  readme.md
src/baloo_gym/domain_randomization/: .gitignore  README.md  pyproject.toml
src/baloo_gym/domain_randomization/domain_randomization/methods/: base_randomizer.py  curriculum_randomizer.py  vanilla_randomizer.py
src/baloo_gym/domain_randomization/tests/notebooks/: dr_develop.ipynb
utils/: action_spaces.py  baloo_lib.py  helpers.py  mujoco_rendering.py  observation.py  observation_spaces.py
wrappers/: force_reward_wrapper.py  three_part_reward_wrapper.py  time_limit_termination_wrapper.py  vec_env_record_video_wrapper.py
(+18 files in other folders)
