[tool.poetry]
name = "baloo-gym"
version = "0.1.0"
description = ""
authors = ["Curtis <curtiscarljohnson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
mujoco = "3.1.4"
numpy = "1.24.3"
scipy = "1.10.1"
glfw = "2.7.0"
imageio = "2.35.1"
gymnasium = "0.29.1"
stable-baselines3 = "2.3.2"
wandb = "0.18.3"
tensorboard = "2.13.0"
tqdm = "4.66.5"
rich = "13.9.2"
moviepy = "1.0.3"
torch = "2.4.1"
tabulate = "^0.9.0"
domain-randomization = { path = "./baloo_gym/domain_randomization/", develop = true }
baloo-mujoco-sim = { path = "../baloo-mujoco-sim/", develop = true }
optuna = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train-baloo-ppo = 'train:train'
