[tool.poetry]
name = "domain_randomization"
version = "0.1.0"
description = "Package that implements domain randomization"
authors = ["Carlo Alessi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "~1.24.3"
tabulate = "^0.9.0"
ipykernel = "^6.29.5"
matplotlib = "~3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
